	  hardware.

Wed Aug 24 12:17:48 CEST 2005

	- Check for NULL before checking whether argument is an array.
	- Remove stray character from string quoting.
	- Fixed check to report missing varchar pointer implementation.

Mon Sep 12 13:53:35 CEST 2005

	- Fixed transaction command handling to not ignore savepoints
	  and to correctly check for errors.

Tue Oct  4 15:23:00 CEST 2005

	- Synced parser.
	- Fixed another bug in check to report missing varchar pointer implementation.

Wed Oct  5 16:57:42 CEST 2005

	- Synced lexer.
	- Set ecpg library version to 5.1.
	- Set ecpg version to 4.1.1.

Wed Nov 30 12:49:13 CET 2005

	- Made several variables "const char *" instead of "char *" as
	  proposed by Qingqing Zhou <zhouqq@cs.toronto.edu>.
	- Replaced all strdup() calls by ECPGstrdup().

Fri Dec  2 16:00:10 CET 2005

	- Added special handling of CONNECTION variable that is used by ECPG
	  instead of given to the backend.
	  
Fr Jan 13 17:29:30 CET 2006

	- Fixed a fixed size buffer in preproc.y to be variable size since an
	  overflow could occur on the fixed one.
	  
Tu Jan 17 18:53:03 CET 2006

	- Data transferred binary is now put into the variables verbatim.
	
Tu Jan 24 10:59:21 CET 2006

	- Synced parser and keyword list.
	- Added another test case.
	
Sa Feb  4 21:35:03 CET 2006

	- Added C bit fields to ecpg parser.
	- Added some default rules to lexer.
	- Added log output to prepare statement.
	
Mo Feb  6 21:21:19 CET 2006

	- Added just another test case.
	- Fixed missing continuation line character.
	- Do not translate $-quoting.
	
Tu Feb  7 18:48:14 CET 2006

	- Bit field notation belongs to a variable not a variable list.
	- Output of line number only done by one function.

Fri, 17 Mar 2006 16:38:19 +0100

	- Fixed bug 2330: Wrong error code in case of a duplicate key

Mo Apr 24 11:40:05 CEST 2006

	- Fixed memory leak bugs found by Martijn Oosterhout.
	- Set ecpg library version to 5.2.
	- Set ecpg version to 4.2.1.
